updated openjdk version to 21.0.9_10

--- a/Dockerfile.crf
+++ b/Dockerfile.crf
@@ -13,7 +13,7 @@
 # -------------------
 # build builder image
 # -------------------
-FROM eclipse-temurin:21-jdk AS builder
+FROM eclipse-temurin:21.0.9_10-jdk AS builder
 
 USER root
 
@@ -61,7 +61,7 @@ RUN rm -rf grobid-source
 # -------------------
 # build runtime image
 # -------------------
-FROM eclipse-temurin:21-jre
+FROM eclipse-temurin:21.0.9_10-jre
 
 RUN apt-get update && \
     apt-get -y upgrade && \
