--- a/Dockerfile.delft
+++ b/Dockerfile.delft
@@ -15,7 +15,7 @@
 # build builder image
 # -------------------
 
-FROM eclipse-temurin:21-jdk AS builder
+FROM eclipse-temurin:21.0.9_10-jdk AS builder
 
 USER root
 
