--- a/.github/workflows/ci-build-unstable.yml
+++ b/.github/workflows/ci-build-unstable.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, ubuntu-24.04-arm, macos-13 ]
+        os: [ ubuntu-latest, macos-latest, ubuntu-24.04-arm, macos-15-intel ]
 
       fail-fast: false
 
